# sycan

./: .gitignore  CHANGELOG.md  README.md  STRUCTURE.md  VERSION_BUMP_NOTES.md  pyproject.toml  run_tests.sh  run_webpage.sh
.github/workflows/: ci.yml
bench/: bench_backends.py  bench_router.py  results.json  router_results.json  run.sh
docs/: BE_BENCHMARK.md  BE_PORT_STATUS.md  README.md  ROUTER_BENCHMARK.md  analysis.md  index.html  level_shifter.py  sycan-0.1.0-py3-none-any.whl  sycan-0.1.1-py3-none-any.whl  sycan-0.1.3-py3-none-any.whl  sycan-0.1.4-py3-none-any.whl  tline_sparams.py
docs/examples/: 2t_vref.py  cs_amp.py  cs_amp_noise.py  lowpass_filter.py  manifest.json  rc_lowpass.py  rc_noise.py  srpp.py  voltage_divider.py  wheatstone.py
docs/repl/: index.html  sycan-0.1.5-py3-none-any.whl  sycan-0.1.6-py3-none-any.whl  sycan-0.1.7-py3-none-any.whl
docs/sedra/: BACKLOG.md  editor.js  embed-example.html  glyphs.js  index.html  package-lock.json  package.json  tsconfig.json  viewer.html  viewer.js
res/: README.md  svg_to_plain.sh
sphinx/: api.rst  assumptions.rst  autodraw.rst  conf.py  examples.rst  getting_started.rst  glyphs.rst  index.rst  terminology.md
sphinx/_static/: sycan.css
src/sycan/: __init__.py  assumptions.py  autodraw.py  autodraw_hacks.py  check.py  circuit.py  headroom.py  mna.py  network_params.py  plot_util.py  polynomials.py  schematic.py  spice.py  svg_util.py
tests/: conftest.py  test_plot_util.py  test_pz.py  test_sedra_emit.py
tests/AC/: test_bjt_ac.py  test_diode_ac.py  test_impedance.py  test_jfet_ac.py  test_lc_tank.py  test_nmos_l1_ac.py  test_rc_lowpass.py  test_rl_highpass.py  test_rlc_series.py  test_sine_source.py  test_solve_tf.py  test_varactor.py  test_waveform_sources.py
tests/DC/: test_2t_voltage_reference.py  test_bandgap_opamp_pmos.py  test_bandgap_reference.py  test_behavioral.py  test_bjt.py  test_cccs.py  test_ccvs.py  test_ce_amplifier.py  test_dc_sweep.py  test_diode.py  test_erc.py  test_gnd.py  test_headroom.py  test_jfet.py  test_l_and_c_at_dc.py  test_mosfet_3t.py  test_mosfet_4t.py  test_nmos_l1.py  test_norton.py  test_numeric_divider.py  test_opamp_inverting.py  test_opamp_noninverting.py  test_sensitivity.py  test_subthreshold_nmos.py  test_vccs.py  test_vcvs.py  test_voltage_divider.py  test_vswitch.py  test_wheatstone.py
tests/assumptions/: test_limit.py  test_much_greater.py  test_region.py  test_unified_solve.py
tests/blocks/: test_common_drain.py  test_common_gate.py  test_common_source.py  test_group.py  test_linear_blocks.py  test_mutual_coupling.py  test_opamp1.py  test_spice_subckt.py  test_srpp_amp.py  test_subcircuit.py  test_subcircuit_params.py  test_triode_amp.py
(+110 files in other folders)
