[project]
name = "sycan"
version = "0.1.6"
description = "SYmbolic Circuit ANalysis"
readme = "README.md"
authors = [
    { name = "AL-255", email = "thelithcore@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.12",
]

[project.scripts]
sycan = "sycan:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lcapy>=1.26",
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=7.4",
    "furo>=2024.8.6",
    "myst-parser>=3.0",
]

[project.urls]
Homepage = "https://github.com/AL-255/sycan"
Issues = "https://github.com/AL-255/sycan/issues"
